--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.1.4",
+    "@nestjs/typeorm": "8.0.2",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.0.1",
     "cache-manager-redis-store": "^2.0.0",
@@ -40,7 +40,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.6",
+    "typeorm": "0.2.41",
     "ulid": "^2.3.0",
     "uuid": "^8.3.2"
   },
