--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
     "pg-error": "^1.1.0",
     "postgres": "^3.2.4",
@@ -52,6 +53,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/moment": "^2.13.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
