docker-compose container name fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   app:
-    container_name: startiv-classroom-prod
+    container_name: startiv-classroom
     image: startiv-classroom
     build:
       context: .
