5001 port exposed from container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     command: /bin/sh -c "npm run start:prod && npx wait-on http://localhost:5000"
     ports:
       - 5000:5000
+      - 5001:5001
     restart: always
     environment:
       - NODE_ENV=local
@@ -35,5 +36,7 @@ services:
       - POSTGRES_PASSWORD=supersecretpassword
     ports:
       - 5433:5432 # for loggin in and creating admin
+    volumes:
+      - ./db:/var/lib/postgresql/data
   cache:
     image: redis:latest
