--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^2.0.1",
     "@nestjs/typeorm": "8.0.2",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.0.1",
@@ -50,6 +51,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/cache-manager": "^4.0.0",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/moment": "^2.13.0",
